Final version. Chatgpt now considers play history fixed all visual problems I can find aside from tab bar shifting

--- a/public/styles/test.css
+++ b/public/styles/test.css
@@ -194,6 +194,7 @@
 
 
 .modal {
+   z-index: 100;
    position: absolute;
    top: 6%;
    left: 6%;
@@ -211,6 +212,7 @@
 }
 
 .tracked-game-modal {
+   z-index: 100;
    position: absolute;
    top: 6%;
    left: 6%;
@@ -228,6 +230,7 @@
 }
 
 .completed-game-modal {
+   z-index: 100;
    position: absolute;
    top: 6%;
    left: 6%;
